--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Invoice system and tools to manage an company",
   "main": "index.js",
   "scripts": {
+    "build": "npm run build-ts && npm run build-js && npm run build-sass && npm run copyassets",
     "build-ts": "tsc",
     "build-js": "node browserify.js",
     "build-sass": "node sassify.js",
@@ -72,9 +73,11 @@
     "@types/mustache": "^4.2.1",
     "@types/passport-auth-token": "^1.0.1",
     "@types/passport-local": "^1.0.34",
+    "alpinejs": "^3.10.3",
     "browserify": "^17.0.0",
     "font-awesome": "^4.7.0",
     "minifyify": "^7.3.5",
+    "pdfkit": "^0.13.0",
     "sass": "^1.55.0",
     "shelljs": "^0.8.5",
     "tsify": "^5.0.4",
